--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </div>
        
 <div class="menu">
+ <div class="tecnologia">
+
+    <a href="index.html">Tecnologia</a>
+ </div>   
 <div class="sociales">
 <a href="Sociales.html">Sociales</a>
 
@@ -32,7 +36,10 @@
           salome sanchez restrepo,
          valerie hoyos gomez
     </div>
-<div class="centro"></div>
+<div class="centro">
+
+
+</div>
 <div class="derecha"></div>
 </div>
 
