--- a/Matematicas.html
+++ b/Matematicas.html
@@ -11,10 +11,14 @@
     <div class="contenedor">
 <div class="encabezado">
 
-    Tecnologia e Informatica
+    Matemáticas
 </div>
        
 <div class="menu">
+    <div class="tecnologia">
+
+        <a href="index.html">Tecnologia</a>
+     </div>   
 <div class="sociales">
 <a href="Sociales.html">Sociales</a>
 
@@ -32,7 +36,36 @@
           salome sanchez restrepo,
          valerie hoyos gomez
     </div>
-<div class="centro"></div>
+<div class="centro">
+<p>
+    Sophie Germain
+</p>
+•Biografía Marie-Sophie Germain nació en París en el seno de una distinguida familia de la burguesía. Su padre, Ambroise-François Germain, maestro orfebre, fue miembro del Tercer Estado en la Asamblea Constituyente de 1789.
+
+Comenzó a estudiar física a los 13 años, su interés por esta disciplina surgió después de leer la historia de física de Jean-Baptistr Montucla.
+
+Sophie Germain hizo descubrimientos importantes en teoría de números, en física matemática, acústica y elasticidad.
+
+ 
+<p>
+•Principales Aportes Germain logro probar para una particular tipo de ecuaciones que cuando 'n' es un número primo como dos veces ese número primo más 1 también es primo.
+
+Por ejemplo, si tomo el (número) primo 5 y lo multiplico por 2 y le añado 1 es 11, ese también es un número primo. 
+</p>
+ 
+<p>
+Porque su elección  su elección fue ya que es una de las "pocas" mujeres matemáticas y su biografía se me hizo un poco interesante, también por el interés que tuvo desde temprana edad etc
+</p>
+ 
+
+    • ---------- •  ---------- •  ---------- •  ---------- •  ---------- •  ---------- •  ---------- •  ---------- •
+    <p>
+Importancia de la estadística  
+</p>
+La estadística resulta fundamental para conocer el comportamiento de ciertos eventos, por lo que ha adquirido un papel clave en la investigación. Es un lenguaje que permite comunicar información basada en datos cuantitativos.
+Las decisiones más importantes de nuestra vida se toman con base en la aplicación de la Estadística.
+ 
+</div>
 <div class="derecha"></div>
 </div>
 
